make voice status update a little more prominent

--- a/videofade-test/css/main.css
+++ b/videofade-test/css/main.css
@@ -140,7 +140,7 @@ input[type="range"] { width: 260px; }
   line-height: 100%;
   letter-spacing: 0%;
   text-align: center;
-  color: #888;
+  color: #ccc;
   margin-top: 8px;
 }
 
